--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
   <display-name>Phoneshop servlet api training</display-name>
+  <context-param>
+    <param-name>insertDemoData</param-name>
+    <param-value>true</param-value>
+  </context-param>
+
+  <listener>
+    <listener-class>com.es.phoneshop.DemoDataServletContextListener</listener-class>
+  </listener>
 
   <servlet>
     <servlet-name>productList</servlet-name>
