--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
   <display-name>Phoneshop servlet api training</display-name>
+
   <context-param>
     <param-name>insertDemoData</param-name>
     <param-value>true</param-value>
@@ -22,5 +23,25 @@
     <servlet-name>productList</servlet-name>
     <url-pattern>/products</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>product</servlet-name>
+    <servlet-class>com.es.phoneshop.web.ProductDetailsPageServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>product</servlet-name>
+    <url-pattern>/products/*</url-pattern>
+  </servlet-mapping>
+
+  <error-page>
+    <location>/WEB-INF/pages/errorProductNotFound.jsp</location>
+    <exception-type>com.es.phoneshop.model.product.NoSuchProductException</exception-type>
+  </error-page>
+
+  <error-page>
+    <location>/WEB-INF/pages/error.jsp</location>
+    <error-code>500</error-code>
+  </error-page>
 
 </web-app>
