added tests and fixed some constants

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 
   <servlet>
     <servlet-name>priceHistory</servlet-name>
-    <servlet-class>com.es.phoneshop.web.PriceHistoryPageServlet</servlet-class>
+    <servlet-class>com.es.phoneshop.web.ProductPriceHistoryPageServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
