--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
       <version>2.23.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.2.0</version>
+        <type>maven-plugin</type>
+    </dependency>
   </dependencies>
   <build>
     <finalName>phoneshop-servlet-api</finalName>
