--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
   </context-param>
 
   <listener>
-    <listener-class>com.es.phoneshop.DemoDataServletContextListener</listener-class>
+    <listener-class>com.es.phoneshop.listener.DemoDataServletContextListener</listener-class>
   </listener>
 
   <servlet>
@@ -44,14 +44,19 @@
     <url-pattern>/products/priceHistory/*</url-pattern>
   </servlet-mapping>
 
-
   <error-page>
     <location>/WEB-INF/pages/errorProductNotFound.jsp</location>
-    <exception-type>com.es.phoneshop.model.product.NoSuchProductException</exception-type>
+    <exception-type>com.es.phoneshop.exception.NoSuchProductException</exception-type>
   </error-page>
 
   <error-page>
     <location>/WEB-INF/pages/error.jsp</location>
+    <error-code>500</error-code>
+  </error-page>
+
+  <error-page>
+    <location>/WEB-INF/pages/errorIncorrectPage.jsp</location>
+    <error-code>404</error-code>
   </error-page>
 
 </web-app>
