--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,11 @@
       <version>2.23.0</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.2.0</version>
-        <type>maven-plugin</type>
-    </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.12.0</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>phoneshop-servlet-api</finalName>
