--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -74,6 +74,16 @@
     <url-pattern>/cart/minicart</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>addToCartPLP</servlet-name>
+    <servlet-class>com.es.phoneshop.web.AddCartItemPLPServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>addToCartPLP</servlet-name>
+    <url-pattern>/products/addToCart</url-pattern>
+  </servlet-mapping>
+
   <error-page>
     <location>/WEB-INF/pages/errorProductNotFound.jsp</location>
     <exception-type>com.es.phoneshop.exception.NoSuchProductException</exception-type>
