--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -94,9 +94,24 @@
     <url-pattern>/checkout</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>overview</servlet-name>
+    <servlet-class>com.es.phoneshop.web.OrderOverviewPageServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>overview</servlet-name>
+    <url-pattern>/order/overview/*</url-pattern>
+  </servlet-mapping>
+
   <error-page>
     <location>/WEB-INF/pages/errorProductNotFound.jsp</location>
     <exception-type>com.es.phoneshop.exception.NoSuchProductException</exception-type>
+  </error-page>
+
+  <error-page>
+    <location>/WEB-INF/pages/errorOrderNotFound.jsp</location>
+    <exception-type>com.es.phoneshop.exception.NoSuchOrderException</exception-type>
   </error-page>
 
   <error-page>
