--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -104,6 +104,16 @@
     <url-pattern>/order/overview/*</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>advancedSearchPage</servlet-name>
+    <servlet-class>com.es.phoneshop.web.AdvancedSearchPageServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>advancedSearchPage</servlet-name>
+    <url-pattern>/products/search</url-pattern>
+  </servlet-mapping>
+
   <filter>
     <filter-name>dosFilter</filter-name>
     <filter-class>com.es.phoneshop.web.filter.DosFilter</filter-class>
